# linguametrica

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml
docs/providers/: azure.md  openai.md
linguametrica/: cli.py  config.py  harness.py  llm.py  metrics.py  reporter.py  session.py  testcase.py
linguametrica/templates/: critique.txt  harmfulness.txt  maliciousness.txt
sample/: .linguametrica.yml  llm.py
sample/data/: test-1.yml
tests/: sample_pipeline.py  test_config.py  test_harness.py  test_metrics.py  test_reporter.py  test_session.py  test_testcase.py
