[tool.poetry]
name = "linguametrica"
version = "0.1.0"
description = "Measure LLM performance of your langchain applications."
authors = ["Willem Meints"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-core = "^0.1.17"
typer = "^0.9.0"
pydantic = "^2.6.0"
pydantic-yaml = "^1.2.0"
langchain-openai = "^0.0.5"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
flake8 = "^7.0.0"
pytest = "^8.0.0"
isort = "^5.13.2"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
linguametrica = "linguametrica.cli:main"
